# pharmabolt-backend-fastapi

./: .gitignore  auth.py  config.py  main.py  pyproject.toml  requirements.txt
app/db/: base.py  models.py
crud/: cart.py  category.py  drugs.py  orders.py  users.py
database/: session.py
models/: cart.py  category.py  drug.py  drug_cart.py  drug_category.py  drug_order.py  mailing_list.py  order.py  prescription.py  prescription_drug.py  user.py
routes/: auth.py  carts.py  drugs.py  orders.py  users.py
schemas/: cart.py  category.py  drug.py  mailing_list.py  order.py  prescription.py  user.py
